Bug 151112 - Calc: Navigator does not retain focus after user presses F5
Summary: Calc: Navigator does not retain focus after user presses F5
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.5.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: Navigator GTK3
  Show dependency treegraph
 
Reported: 2022-09-21 22:43 UTC by martin.thornhill
Modified: 2022-11-03 15:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description martin.thornhill 2022-09-21 22:43:22 UTC
Description:
In Calc 7.3.5.2 LibreOffice Community, press F5 to launch the Navigator.

Any subsequent navigational key tab, shift+tab, left, right - goes to the spreadsheet instead of the Navigator.


Steps to Reproduce:
1. See description.

Actual Results:
See description.

Expected Results:
Press F5, keyboard input should go to the Navigator, not the spreadsheet.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.6.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 2; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Ubuntu package version: 1:7.3.6-0ubuntu0.22.04.1
Calc: threaded
Comment 1 Eike Rathke (retired, only occasionally showing up) 2022-09-22 12:49:07 UTC
And not even when using the operating system's window switcher (at least on Linux with gtk3 backend on Gnome) the focus is obtained.
Comment 2 Rafael Lima 2022-09-28 17:29:44 UTC
This does not happen in kf5.

When I press F5 the navigator opens and the "Column" entry is focused, so using the arrow keys will change the column values. And pressing the Tab will move to subsequent widgets in the navigator.

Tested with

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: e4d377d117874d2dc9039751dc029cb7249bd86c
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 3 V Stuart Foote 2022-10-30 11:36:13 UTC
Windows builds unaffected. Focus and navigation remains in the <F5> floating instance of the Navigator. The SB resident version updates to match. And updates/movement actions made on the sheet reflect back to the Navigator(s).


Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02db1642c9ce4394f4f85755c4a0a831e547e4fb
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2022-11-03 15:47:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4865ad2365a25d89e61d382613a1f35c78800f4d

Resolves: tdf#151112 move focus into container widget hierarchy

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2022-11-03 15:47:45 UTC
Done in trunk. Won't backport for now, focus is typically tricky so let this burn in on trunk for a while.