Resolves: tdf#151112 move focus into container widget hierarchy

Change-Id: I5e5ca5a377f8e4c79ec8b2e4c2674be7ed0c10a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142230
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>